serd (0.18.1) unstable;

  * Fix crash when resolving against non-standard base URIs
  * Fix bug that caused "a" abbreviation in non-predicate position
  * Disable timestamps in HTML documentation for reproducible build
  * Fix clashing symbol "error" in amalgamation build

 -- David Robillard <d@drobilla.net>  Thu, 20 Dec 2012 16:27:10 -0500

serd (0.18.0) stable;

  * Support digits at start of local names as per new Turtle grammar
  * Add incremental read interface suitable for reading from infinite streams
  * Add -e option to serdi to use incremental reading
  * Add error callback to reader and writer for custom error reporting
  * Add -q option to serdi to suppress all non-data output, e.g. errors
  * Reset indent when finishing a write
  * Report write size correctly when invalid UTF-8 is encountered and a
    replacement character is written
  * Strip down API documentation to a single clean page
  * Fix various hyper-strict warnings
  * Do not require a C++ compiler to build
  * Add option to build utilities as static binaries
  * Upgrade to waf 1.7.2

 -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 00:18:34 -0400

serd (0.14.0) stable;

  * Use path variables in pkgconfig files
  * Install man page to DATADIR (e.g. PREFIX/share/man, not PREFIX/man)
  * Tolerate invalid characters in string literals by replacing with the
    Unicode replacement character
  * Report reason for failure to open file in serdi
  * Improve write performance by doing bulk writes for unescaped substrings
  * Add SerdBulkSink for writing bulk output and corresponding serdi -B option
  * Add serdi -f option to prevent URI qualification
  * Remove use of multi-byte peek (readahead) and use exactly 1 page for
    read buffer (instead of 2)
  * Handle a quote as the last character of a long string literal in the
    writer (by escaping it) rather than the reader, to avoid writing Turtle
    other tools fail to parse.