@@ -1,11 +1,12 @@
 serd (0.18.1) unstable;
 
+  * Fix crash when serd_node_new_decimal is called with infinity or NaN
   * Fix crash when resolving against non-standard base URIs
   * Fix bug that caused "a" abbreviation in non-predicate position
   * Disable timestamps in HTML documentation for reproducible build
   * Fix clashing symbol "error" in amalgamation build
 
- -- David Robillard <d@drobilla.net>  Thu, 20 Dec 2012 16:27:10 -0500
+ -- David Robillard <d@drobilla.net>  Fri, 21 Dec 2012 13:26:05 -0500
 
 serd (0.18.0) stable;
 
